--- a/testExamples/crvTests/grid.html
+++ b/testExamples/crvTests/grid.html
@@ -5,6 +5,7 @@
 <head>
     <title>Example 01.02 - First Scene</title>
     <script type="text/javascript" src="../libs/three.js"></script>
+
     <script type="text/javascript" src="../libs/stats.js"></script>
     <script type="text/javascript" src="../libs/dat.gui.js"></script>
     <script type="text/javascript" src="../libs/TrackballControls.js"></script>
@@ -47,8 +48,6 @@
     function init() {
         var stats = initStats();
         var gui = new dat.GUI();
-        gui.add(controls,'rotationSpeed',0,.5);
-        gui.add(controls,'bouncingSpeed',0,.5);
         // create a scene, that will hold all our elements such as objects, cameras and lights.
         var scene = new THREE.Scene();
 
@@ -59,6 +58,7 @@
         trackballControls.rotationSpeed = 1.0;
         trackballControls.zoomSpeed = 1.0;
         trackballControls.panSpeed = 1.0;
+
         // create a render and set the size
         var renderer = new THREE.WebGLRenderer();
 
@@ -67,66 +67,65 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.shadowMapEnabled = true;
 
-        var spotLight = new THREE.SpotLight(0xffffff);
-        spotLight.position.set(-40,60,-10);
-        spotLight.castShadow = true;
-        spotLight.shadowDarkness = .5;
-        scene.add(spotLight);
-
-        // show axes in the screen
-        //var axes = new THREE.AxisHelper(10);
-        //scene.add(axes);
-
-        // create the ground plane
-        var planeGeometry = new THREE.PlaneGeometry(60, 20);
-        var planeMaterial = new THREE.MeshLambertMaterial({color: 0xcccccc});
-        var plane = new THREE.Mesh(planeGeometry, planeMaterial);
-        plane.receiveShadow = true;
-
-        // rotate and position the plane
-        plane.rotation.x = -0.5 * Math.PI;
-        plane.position.x = 15;
-        plane.position.y = 0;
-        plane.position.z = 0;
-
-        // add the plane to the scene
-        scene.add(plane);
-
-        // create a cube
-        var cubeGeometry = new THREE.BoxGeometry(4, 4, 4);
-        var cubeMaterial = new THREE.MeshLambertMaterial({color: 0xff0000});
-        var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
-        cube.castShadow = true;
-
-        // position the cube
-        cube.position.x = -4;
-        cube.position.y = 3;
-        cube.position.z = 0;
-
-        // add the cube to the scene
-        scene.add(cube);
-
-        // create a sphere
-        var sphereGeometry = new THREE.SphereGeometry(4, 20, 20);
-        var sphereMaterial = new THREE.MeshLambertMaterial({color: 0x7777ff});
-        var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
-
-        // position the sphere
-        sphere.position.x = 20;
-        sphere.position.y = 4;
-        sphere.position.z = 2;
-        sphere.castShadow = true;
-
-        // add the sphere to the scene
-        scene.add(sphere);
-
         // position and point the camera to the center of the scene
         camera.position.x = -30;
         camera.position.y = 40;
         camera.position.z = 30;
         camera.lookAt(scene.position);
 
+        // introduce spotlight into scene
+
+        var spotLight = new THREE.SpotLight(0xffffff);
+        spotLight.position.set(-40,60,-10);
+        spotLight.castShadow = true;
+        spotLight.shadowDarkness = .5;
+        scene.add(spotLight);
+
         var step = 0;
+
+        /*
+        Grid Code Starts Here
+        */
+
+        var vertex = [
+                new THREE.Vector3(0,0,0),
+                new THREE.Vector3(0,0,5)
+        ];
+
+        var X = 20;
+        var Y = 20;
+        var gridCrvs = [];
+        var gridMat = new THREE.LineBasicMaterial({color:0x7777ff,linewidth:2});
+        var nextCrv = new THREE.Geometry();
+        var start = new THREE.Vector3(0,0,0);
+        var end = new THREE.Vector3(0,0,0);
+
+        for(i=0;i<X;i++){
+            for(j=0;j<Y;j++){
+                start.addVectors(vertex[0], new THREE.Vector3(i,j,0));
+                end.addVectors(vertex[1], new THREE.Vector3(i,j,0));
+                nextCrv.vertices = [start,end];
+                newLine = new THREE.Line(nextCrv.clone(),gridMat);
+                scene.add(newLine);
+                gridCrvs.push(newLine);
+            }
+        }
+
+
+        /*OLD SCHOOL CURVE CODE*/
+        var subDiv = 20
+        var geo = new THREE.Geometry();
+        var crv = new THREE.QuadraticBezierCurve3();
+        crv.v0 = new THREE.Vector3(4,10,2);
+        crv.v1 = new THREE.Vector3(4,0,2);
+        crv.v2 = new THREE.Vector3(5,10,10);
+        for(i=0;i<subDiv;i++){
+            geo.vertices.push(crv.getPoint(i/subDiv))
+        }
+        var crvMat02 = new THREE.LineBasicMaterial({color:0x7777ff, linewidth: 2 });
+        var curve = new THREE.Line(geo,crvMat02);
+        scene.add(curve);
+        /*END OLD SCHOOL CURVE CODE*/
 
         function adjustSize(){
             camera.aspect = window.innerWidth/window.innerHeight;
@@ -140,12 +139,6 @@
             var delta = clock.getDelta();
             trackballControls.update(delta);
             stats.update();
-            step += controls.bouncingSpeed;
-            sphere.position.x = 20+(10*(Math.cos(step)));
-            sphere.position.y = 2+(10*Math.abs(Math.sin(step)));
-            cube.rotation.x+=controls.rotationSpeed;
-            cube.rotation.y+=controls.rotationSpeed;
-            cube.rotation.z+=controls.rotationSpeed;
             window.addEventListener("resize",adjustSize(),false);
             requestAnimationFrame(renderScene);
             renderer.render(scene,camera);
