--- a/testExamples/tests/networkCrvs.html
+++ b/testExamples/tests/networkCrvs.html
@@ -5,6 +5,7 @@
 <head>
     <title>Example 01.02 - First Scene</title>
     <script type="text/javascript" src="../libs/three.js"></script>
+
     <script type="text/javascript" src="../libs/stats.js"></script>
     <script type="text/javascript" src="../libs/dat.gui.js"></script>
     <script type="text/javascript" src="../libs/TrackballControls.js"></script>
@@ -47,8 +48,6 @@
     function init() {
         var stats = initStats();
         var gui = new dat.GUI();
-        gui.add(controls,'rotationSpeed',0,.5);
-        gui.add(controls,'bouncingSpeed',0,.5);
         // create a scene, that will hold all our elements such as objects, cameras and lights.
         var scene = new THREE.Scene();
 
@@ -59,6 +58,7 @@
         trackballControls.rotationSpeed = 1.0;
         trackballControls.zoomSpeed = 1.0;
         trackballControls.panSpeed = 1.0;
+
         // create a render and set the size
         var renderer = new THREE.WebGLRenderer();
 
@@ -67,44 +67,33 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.shadowMapEnabled = true;
 
+        // position and point the camera to the center of the scene
+        camera.position.x = -30;
+        camera.position.y = 40;
+        camera.position.z = 30;
+        camera.lookAt(scene.position);
+
+        // introduce spotlight into scene
+
         var spotLight = new THREE.SpotLight(0xffffff);
         spotLight.position.set(-40,60,-10);
         spotLight.castShadow = true;
         spotLight.shadowDarkness = .5;
         scene.add(spotLight);
 
-        // show axes in the screen
-        //var axes = new THREE.AxisHelper(10);
-        //scene.add(axes);
+        /* OLD SCHOOL LINE CODE*/
 
-        // create the ground plane
-        var planeGeometry = new THREE.PlaneGeometry(60, 20);
-        var planeMaterial = new THREE.MeshLambertMaterial({color: 0xcccccc});
-        var plane = new THREE.Mesh(planeGeometry, planeMaterial);
-        plane.receiveShadow = true;
+        var step = 0;
 
-        // rotate and position the plane
-        plane.rotation.x = -0.5 * Math.PI;
-        plane.position.x = 15;
-        plane.position.y = 0;
-        plane.position.z = 0;
+        var newCrv;
+        newCrv = new THREE.Geometry();
+        newCrv.vertices.push(new Vector3(4,10,2));
+        newCrv.vertices.push(new Vector3(4,0,2));
+        var crvMat = new THREE.LineBasicMaterial({color:0xffffff, linewidth: 2 });
+        var line = new THREE.Line(newCrv,crvMat);
+        scene.add(line);
 
-        // add the plane to the scene
-        scene.add(plane);
-
-        // create a cube
-        var cubeGeometry = new THREE.BoxGeometry(4, 4, 4);
-        var cubeMaterial = new THREE.MeshLambertMaterial({color: 0xff0000});
-        var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
-        cube.castShadow = true;
-
-        // position the cube
-        cube.position.x = -4;
-        cube.position.y = 3;
-        cube.position.z = 0;
-
-        // add the cube to the scene
-        scene.add(cube);
+        /*END OLD SCHOOL LINE CODE*/
 
         // create a sphere
         var sphereGeometry = new THREE.SphereGeometry(4, 20, 20);
@@ -120,14 +109,6 @@
         // add the sphere to the scene
         scene.add(sphere);
 
-        // position and point the camera to the center of the scene
-        camera.position.x = -30;
-        camera.position.y = 40;
-        camera.position.z = 30;
-        camera.lookAt(scene.position);
-
-        var step = 0;
-
         function adjustSize(){
             camera.aspect = window.innerWidth/window.innerHeight;
             camera.updateProjectionMatrix();
@@ -140,12 +121,6 @@
             var delta = clock.getDelta();
             trackballControls.update(delta);
             stats.update();
-            step += controls.bouncingSpeed;
-            sphere.position.x = 20+(10*(Math.cos(step)));
-            sphere.position.y = 2+(10*Math.abs(Math.sin(step)));
-            cube.rotation.x+=controls.rotationSpeed;
-            cube.rotation.y+=controls.rotationSpeed;
-            cube.rotation.z+=controls.rotationSpeed;
             window.addEventListener("resize",adjustSize(),false);
             requestAnimationFrame(renderScene);
             renderer.render(scene,camera);
